fix: OverviewMobile visibility

--- a/codeverse/src/components/Products/Product-Overview/OverviewMobile/styles.module.scss
+++ b/codeverse/src/components/Products/Product-Overview/OverviewMobile/styles.module.scss
@@ -1,3 +1,7 @@
+.wrapper {
+    padding-bottom: 30px;
+}
+
 .carousel {
     margin-top: 16px;
 }
